--- a/index.html
+++ b/index.html
@@ -424,6 +424,19 @@
           </div>
         </div>
         <div class="row d-flex">
+
+		  <div class="col-md-4 d-flex ftco-animate">
+				<div class="blog-entry justify-content-end">
+				<a href="https://github.com/Manthan-Mistry/Chess-App-V3" class="block-20 zoom-effect" style="background-image: url('images/chess-app.png');">
+				</a>
+				<div class="text mt-3 float-right d-block">
+	
+				  <h3 class="heading"><a href="https://github.com/Manthan-Mistry/Chess-App-V3">Chess Player Analysis App Using Python, Streamlit, Supabase</a></h3>
+				  <p> Developed an interactive chess analysis web app using Python, Chess.com API, Wikipedia API, Supabase database 
+					and Streamlit enabling users to view and track real-time player stats, and performance metrics.</p>
+				</div>
+			  </div>
+		  </div>
         
 		  <div class="col-md-4 d-flex ftco-animate">
 			<div class="blog-entry justify-content-end">
@@ -448,21 +461,8 @@
               </div>
             </div>
           </div>
-
-		  <div class="col-md-4 d-flex ftco-animate">
-			<div class="blog-entry justify-content-end">
-			<a href="https://telangana-growth-dash-app-09ls.onrender.com/" class="block-20 zoom-effect" style="background-image: url('images/Screenshot\ \(90\).png');">
-			</a>
-			<div class="text mt-3 float-right d-block">
-
-			  <h3 class="heading"><a href="https://telangana-growth-dash-app-09ls.onrender.com/">Analytical Web Application Using Python</a></h3>
-			  <p>Made a fully interactive Web-App using Dash, Plotly and Python. Giving user the ability to twist parameters to get insights .</p>
-			</div>
-		  </div>
-		</div>
-          
         </div>
-	<br>
+	 <br>
 		<!-- added justify-content-center to center align the last two projects -->
 		<div class="row d-flex justify-content-center">  
 			<div class="col-md-4 d-flex ftco-animate">
@@ -512,6 +512,18 @@
 				</div>
 			  </div>
 			</div>
+
+			<div class="col-md-4 d-flex ftco-animate">
+				<div class="blog-entry justify-content-end">
+				  <a href="https://telangana-growth-dash-app-09ls.onrender.com/" class="block-20 zoom-effect" style="background-image: url('images/Screenshot\ \(90\).png');">
+				  </a>
+				  <div class="text mt-3 float-right d-block">
+	
+				  <h3 class="heading"><a href="https://telangana-growth-dash-app-09ls.onrender.com/">Analytical Web Application Using Python</a></h3>
+				  <p>Made a fully interactive Web-App using Dash, Plotly and Python. Giving user the ability to twist parameters to get insights .</p>
+				  </div>
+				</div>
+			  </div>
 
 		 </div>
 	  </div>
